@@ -1,6 +1,8 @@
 
 Drupal 7.37, xxxx-xx-xx (development version)
 -----------------------
+- Allowed custom HTML tags with a dash in the name to pass through filter_xss()
+  when specified in the list of allowed tags.
 - Allowed hook_field_schema() implementations to specify indexes for fields
   based on a fixed-length column prefix (rather than the entire column), as was
   already allowed in hook_schema() implementations.
